# WhimSE

./: .gitignore  .gitmodules  README.md  make-archive.sh  pyproject.toml  whimse.spec
cildiff/: .clang-format  .gitignore  Makefile
cildiff/src/: Makefile  cil_file.c  cil_file.h  cil_node.c  cil_node.h  cildiff.c  cmp_common.c  cmp_common.h  cmp_data.c  cmp_data.h  cmp_node.c  cmp_node.h  cmp_node_defs.c  cmp_node_defs.h  cmp_set.c  cmp_set.h  cmp_subset.c  cmp_subset.h  cmp_subset_defs.c  cmp_subset_defs.h  diff.c  diff.h  json.c  json.h  mem.c  mem.h  options.c  options.h  utils.c  utils.h
tests/: all.cil  test_avc_analysis.py  test_cildiff.py
whimse/: __init__.py  __main__.py  config.py
whimse/analyze/: __init__.py  avc.py  common.py
whimse/detect/: __init__.py  common.py  local_modifications.py  modules.py
whimse/detect/modules/: __init__.py  cildiff.py
whimse/detect/modules/cil/: build.py  parse.py
whimse/explore/: __init__.py  common.py  types.py
whimse/explore/active/: __init__.py
whimse/explore/actual/: __init__.py  types.py
whimse/explore/distributed/: __init__.py  types.py
whimse/explore/distributed/pm/: __init__.py  common.py  dnf.py
whimse/explore/distribution/: __init__.py
whimse/explore/distribution/pm/: __init__.py  common.py  dnf.py
whimse/report/: __init__.py  common.py  html.py  json.py  plain.py  types.py
whimse/report/analysis/: __init__.py  avc.py  common.py
whimse/report/templates/: report.html.jinja
whimse/selinux/: __init__.py
whimse/types/: __init__.py  cildiff.py  local_modifications.py  modules.py  policy.py  reports.py
whimse/utils/: __init__.py  avc.py  logging.py  policy_file.py  semodule.py  shell.py  subprocess.py  tracing.py
