[project]
dynamic = ["version"]
name = "whimse"
dependencies = [
    "auparse",
    "jinja2 > 3",
    "pydantic > 2",
    "rpm > 4",
    "selinux > 3",
    "setools > 4",
]
requires-python = ">= 3.11"

[project.scripts]
whimse = "whimse:main"

[tool.pylint.main]
ignore = [
    "cildiff"
]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
