[build-system]
requires = ["setuptools >= 60"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "whimse"
dependencies = [
    "jinja2 > 3",
    "pydantic > 2",
    "rpm > 4",
    "selinux > 3",
    "setools > 4",
]
requires-python = ">= 3.11"

[project.scripts]
whimse = "whimse:main"

[tool.setuptools.dynamic]
version = { attr = "whimse.__version__" }

[tool.setuptools.packages.find]
include = ["whimse"]

[tool.pylint.main]
ignore = [
    "cildiff",
]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
