[build-system]
requires = ["setuptools >= 53"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "whimse"
description = "What Have I Modified in SELinux"
authors = [
    { name = "Juraj Marcin", email = "juraj@jurajmarcin.com" },
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

dependencies = [
    "jinja2 > 3",
    "pydantic > 2",
    "rpm > 4",
    "selinux > 3",
    "setools > 4",
]
requires-python = ">= 3.11"

[project.scripts]
whimse = "whimse:main"

[tool.setuptools.dynamic]
version = { attr = "whimse.__version__" }

[tool.setuptools.packages.find]
include = [
    "whimse",
    "whimse.**",
]

[tool.setuptools.package-data]
"whimse.report" = [
    "templates/*",
]

[tool.tox]
requires = [
    "tox",
    "pytest",
]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.pylint.main]
extension-pkg-allow-list = [
    "auparse",
    "rpm",
    "setools.policyrep",
]
ignore = [
    "cildiff",
]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-return-statements",
    "too-many-instance-attributes",
]
